--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,11 @@
 
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
     </nav>
+    <hr>
+    <small>
+      Site by <b><a href="{{ site.baseurl }}">Narendra Acharya</a></b> using 
+      <a href="http://hyde.getpoole.com/">Hyde</a>.
+    </small>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
