--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
   {% include head.html %}
 
   <body>
-
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+    
     {% include sidebar.html %}
 
     <div class="content container">
