Fix for baseurl issue

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ "/" | relative_url }}">
           {{ site.title }}
         </a>
       </h1>
@@ -30,7 +30,7 @@
     </nav>
     <hr>
     <small>
-      Site by <b><a href="{{ site.baseurl }}">Narendra Acharya</a></b> using 
+      Site by <b><a href="{{ "/" | relative_url }}">Narendra Acharya</a></b> using 
       <a href="http://hyde.getpoole.com/">Hyde</a>.
     </small>
 
